# student-project-2025

./: Diabetic report(003,051,049).docx  Diabetics(003,051,049)  Fake_News_Detection-ML project (Dhriti S H).docx  ML Project 2.docx  Personalised medicines (R23EQ002).txt  aishwaryagowda140-star  app.py  audio_analyzer.py  diabetics1.ipynb(003,051,049)  fake_news_model.joblib  fake_newsdetection.py  loan approval prediction.docx  ml report.docx  models.py  persosonalised medicine.ipynb  predict_news.py  replit.md  requirements.txt  tfidf_vectorizer.joblib
ML(R23EQ038,34,19,20)/: xgboost.ipynb
Mlproject(R23EQ032,29,27)/: README.md  app.py  pyproject.toml
credit-card-fraud-detection-main/: ML REPORT.docx  readme.md
templates/: index.html
tomato_disease_project/: .gitignore  index.html  infer_gradcam.py  train_tomato.py
