[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "librosa>=0.11.0",
    "numpy>=2.3.5",
    "plotly>=6.5.0",
    "psycopg2-binary>=2.9.11",
    "pydub>=0.25.1",
    "scikit-learn>=1.7.2",
    "scipy>=1.16.3",
    "sqlalchemy>=2.0.44",
    "streamlit>=1.51.0",
]
